Add csrf token to forms

--- a/equipmentmanager/templates/pages/add-equipment.html
+++ b/equipmentmanager/templates/pages/add-equipment.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <form method="POST">
+    {% csrf_token %}
     {{ form|crispy }}
     <input class="btn btn-primary" type="submit" value="Add equipment"/>
 </form>
